generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id         String    @id @unique @default(cuid())
  email      String    @unique
  password   String
  first_name String
  last_name  String
  role       String
  Reviewer   Reviewer[]
}

model Schedule {
  id       String    @id @unique @default(cuid())
  fromDate DateTime
  toDate   DateTime
  sessions Session[]
  created  DateTime
}

model Session {
  id         String    @id @unique @default(cuid())
  title      String
  location   String
  date       DateTime
  events     Event[]
  Schedule   Schedule? @relation(fields: [scheduleId], references: [id])
  scheduleId String?
  created    DateTime
}

model Event {
  id        String   @id @unique @default(cuid())
  title     String
  presenter String
  startTime DateTime
  endTime   DateTime
  Session   Session? @relation(fields: [sessionId], references: [id])
  sessionId String?
  created   DateTime
}

model Paper {
  id        String     @id @unique @default(cuid())
  title     String
  abstract  String
  pdfPath   String
  authors   Author[]
  reviewers Reviewer[]
  created   DateTime
}

model Author {
  id            String      @id @unique @default(cuid())
  fname         String
  lname         String
  email         String
  affiliation   Institution @relation(fields: [institutionId], references: [id])
  Paper         Paper?      @relation(fields: [paperId], references: [id])
  paperId       String?
  institutionId String
  isPresenter   Boolean
  created       DateTime
}

model Reviewer {
  id           String   @id @unique @default(cuid())
  User         User     @relation(fields: [userId], references: [id])
  userId       String   
  evaluation   Int
  contribution Int?
  strengths    String?
  weaknesses   String?
  Paper        Paper?   @relation(fields: [paperId], references: [id])
  paperId      String?
  created      DateTime
}

model Institution {
  id      String   @id @unique @default(cuid())
  name    String
  Author  Author[]
  created DateTime
}

model Location {
  id      String   @id @unique @default(cuid())
  name    String
  created DateTime
}

model ConferenceDates {
  id      String   @id @unique @default(cuid())
  date    DateTime
  created DateTime
}
